work on i2p and fixed broken block processing

--- a/onionr/static-data/default_config.json
+++ b/onionr/static-data/default_config.json
@@ -15,7 +15,8 @@
     },
     "i2p":{
 	"host": false,
-	"connect": true
+    "connect": true,
+    "ownAddr": ""
      },
     "allocations":{
         "disk": 1000000000,
